porting part 6